# oscuras

./: Cargo.toml  README.md  build.rs
src/: main.rs  viewer.rs
src/shaders/: calculate_intersections.comp  generate_paths.comp  viewer.comp  viewer.frag  viewer.vert
src/viewer/: camera.rs  data.rs  data_types.rs  gpu_buffer.rs  pathtracer.rs  scene.rs
